--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@angular/compiler": "8.0.2",
     "@angular/core": "8.0.2",
     "@angular/forms": "8.0.2",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "8.0.2",
     "@angular/platform-browser-dynamic": "8.0.2",
     "@angular/router": "8.0.2",
@@ -16,7 +17,7 @@
     "jasmine-core": "2.99.1",
     "jasmine-marbles": "0.5.0",
     "rxjs": "6.5.2",
-    "rxjs-compat": "^6.5.2",
+    "rxjs-compat": "6.5.2",
     "tslib": "1.10.0",
     "web-animations-js": "2.3.1",
     "zone.js": "0.9.1"
